--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
   <img src="assets/baby pumpkin/b2.png">
   <img src="assets/baby pumpkin/b2.png"
 
-  <footer>designed by @looptylucyloop on tiktok</footer>
-  <footer>for by @luvr_safii on tiktok</footer>
+  <footer>designed by @looptylucyloop on tiktok, for @luvr_safii on tiktok</footer>
 </body>
 </html>
